# data.frc

./: .pre-commit-config.yaml  pyproject.toml  tox.ini
src/: __main__.py  api_client.py
src/schemas/: __init__.py  api_status.py  award.py  base_schema.py  district.py  event.py  event_team_status.py  main_schemas.py  match.py  media.py  robot.py  team.py
src/tests/: a_test.py  district_test.py  event_test.py  tba_api_client_test.py
src/utils/: __init__.py  base_schema.py  functions.py  internal_data.py  team.py
